--- a/service-gateway/conf/application.conf
+++ b/service-gateway/conf/application.conf
@@ -41,10 +41,10 @@ fixedConnectionPool = 9
 
 db.default.hikaricp.minimumIdle = ${fixedConnectionPool}
 db.default.hikaricp.maximumPoolSize = ${fixedConnectionPool}
-db.default.url="jdbc:postgresql://localhost:5432/scaffold"
+db.default.url="jdbc:postgresql://localhost:5433/employment_management"
 
 db.default.username=postgres
-db.default.password="password"
+db.default.password="adamahama"
 
 db.default.migration.placeholderPrefix="$flyway{{{"
 db.default.migration.placeholderSuffix="}}}"
@@ -68,7 +68,7 @@ api.version="1.0.0"
 swagger.api.host="http://localhost:9000/"
 swagger.api.info.title="play"
 swagger.api.info.termsOfServiceUrl="http://encentralsolutions.com"
-swagger.api.info.contact="adeshina@encentralsolutions.com"
+swagger.api.info.contact="imranabdulmalik@encentralsolutions.com"
 swagger.api.info.license="Licence Data. Coming Soon.."
 swagger.api.info.description=" For more information on error codes click <strong><a href='/api-server/error'>here</a></strong> "
 
