--- a/service-gateway/pom.xml
+++ b/service-gateway/pom.xml
@@ -130,8 +130,11 @@
             <artifactId>validation-api</artifactId>
             <version>2.0.1.Final</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.12.1</version>
+        </dependency>
     </dependencies>
 
 
