--- a/service-gateway/conf/application.conf
+++ b/service-gateway/conf/application.conf
@@ -66,7 +66,7 @@ play {
 
 api.version="1.0.0"
 swagger.api.host="http://localhost:9000/"
-swagger.api.info.title="play"
+swagger.api.info.title="Employment Management System API"
 swagger.api.info.termsOfServiceUrl="http://encentralsolutions.com"
 swagger.api.info.contact="imranabdulmalik@encentralsolutions.com"
 swagger.api.info.license="Licence Data. Coming Soon.."
