--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,11 @@
             <version>4.2.2</version>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>com.fasterxml.jackson.core</groupId>-->
-<!--            <artifactId>jackson-core</artifactId>-->
-<!--            <version>2.8.1</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.8.11</version>
+        </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
@@ -49,9 +49,19 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.2</version>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
             <version>2.12.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.typesafe.play</groupId>
+            <artifactId>play-java-forms_2.11</artifactId>
+            <version>2.6.11</version>
         </dependency>
         <dependency>
             <groupId>org.immutables</groupId>
@@ -59,11 +69,7 @@
             <version>${immutables.version}</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>com.typesafe.play</groupId>
-            <artifactId>play-java-forms_2.11</artifactId>
-            <version>2.6.11</version>
-        </dependency>
+
     </dependencies>
     <build>
         <plugins>
@@ -170,4 +176,3 @@
         <module>app-impl</module>
     </modules>
 </project>
-
