--- a/service-gateway/conf/application.conf
+++ b/service-gateway/conf/application.conf
@@ -41,7 +41,7 @@ fixedConnectionPool = 9
 
 db.default.hikaricp.minimumIdle = ${fixedConnectionPool}
 db.default.hikaricp.maximumPoolSize = ${fixedConnectionPool}
-db.default.url="jdbc:postgresql://localhost:5433/employment_management"
+db.default.url="jdbc:postgresql://localhost:5433/employment_system"
 
 db.default.username=postgres
 db.default.password="adamahama"
