--- a/service-gateway/pom.xml
+++ b/service-gateway/pom.xml
@@ -135,8 +135,12 @@
             <artifactId>validation-api</artifactId>
             <version>2.0.1.Final</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>com.encentral.scaffold</groupId>
+            <artifactId>commons</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
